--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
   font-weight: 400;
 
   font-synthesis: none;
@@ -21,7 +20,7 @@ body {
   max-width: 1280px;
   margin-left: auto;
   margin-right: auto;
-  padding: 4rem 2rem;
+  padding: 2rem;
 }
 
 
